--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-svg-sprite": "^2.0.3",
     "sass": "^1.56.1"
+  },
+  "dependencies": {
+    "swiper": "^11.1.7"
   }
 }
